I fixed the gap problem

--- a/css/style.css
+++ b/css/style.css
@@ -760,55 +760,55 @@ svg:not(:root) {
 }
 .slider {
   position: relative;
-  width: 100%; /* Adjust as needed */
+  width: 100%;
   height: 420px;
   max-width: 1080px;
   margin: 0 auto;
-  height: 400px; /* Define a height for the slider */
+  height: 400px; 
   overflow: hidden;
-  cursor: grab; /* Default cursor */
+  cursor: grab; 
   margin-top: 40px;
 }
 .slider2 {
   position: relative;
-  width: 100%; /* Adjust as needed */
+  width: 100%; 
   height: 420px;
   max-width: 1080px;
   margin: 0 auto;
-  height: 250px; /* Define a height for the slider */
+  height: 250px; 
   overflow: hidden;
-  cursor: grab; /* Default cursor */
+  cursor: grab; 
   margin-top: 40px;
 }
 .slider-inner {
-  display: flex; /* Use flex to align items horizontally */
+  display: flex; 
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   max-width: 348px;
-  height: 213px; /* Width of the container */ /* Full height of the slider */
-  transition: left 0.3s ease; /* Smooth transition for sliding */
+  height: 213px; 
+  transition: left 0.3s ease; 
   transition: transform 0.5s ease;
   margin: 0 20px 0 20px;
 }
 .slider-inner2 {
-  display: flex; /* Use flex to align items horizontally */
+  display: flex; 
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   max-width: 348px;
-  height: 213px; /* Width of the container */ /* Full height of the slider */
-  transition: left 0.3s ease; /* Smooth transition for sliding */
+  height: 213px;
+  transition: left 0.3s ease; 
   transition: transform 0.5s ease;
   margin: 0 20px 0 20px;
 }
 .slide-img {
   position: relative;
-  min-width: 348px; /* Width of each slide */
+  min-width: 348px; 
   height: 390px;
-  margin-right: 30px; /* Space between slides */
+  margin-right: 30px; 
   border-radius: 1rem;
   overflow: hidden;
   border-radius: 8px;
@@ -831,9 +831,9 @@ svg:not(:root) {
 }
 .slide-img2 {
   position: relative;
-  min-width: 420px; /* Width of each slide */
+  min-width: 420px;
   height: 239px;
-  margin-right: 30px; /* Space between slides */
+  margin-right: 30px; 
   border-radius: 1rem;
   overflow: hidden;
   border-radius: 8px;
@@ -854,7 +854,7 @@ svg:not(:root) {
 .slider-relative-img4,
 .slider-relative-img5 {
   position: relative;
-  width: 100%; /* Ensure it fills the container width */
+  width: 100%; 
   background-color: white;
 }
 
@@ -865,10 +865,10 @@ svg:not(:root) {
 .bg-img5 {
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100%; /* Ensure it fills the container width */
+  width: 100%; 
   height: 213px;
   transition: all 0.25s ease-in-out;
-  user-select: none; /* Prevent text selection */
+  user-select: none;
 }
 .bg-img6,
 .bg-img7,
@@ -876,9 +876,9 @@ svg:not(:root) {
 .bg-img9 {
   background-repeat: no-repeat;
   background-size: cover;
-  width: 118px; /* Ensure it fills the container width */
-  height: 52px; /* Set height */
-  user-select: none; /* Prevent text selection */
+  width: 118px;
+  height: 52px; 
+  user-select: none;
   margin: 20px;
 }
 
@@ -900,7 +900,7 @@ svg:not(:root) {
   overflow: hidden;
   background-repeat: no-repeat;
   background-size: cover;
-  user-select: none; /* Prevent text selection */
+  user-select: none; 
 }
 
 .slide-img > img {
@@ -917,10 +917,10 @@ svg:not(:root) {
   width: 100%;
   position: relative;
   border-radius: 9px;
-  margin: 0 auto; /* Width of the progress bar */
-  height: 2px; /* Height of the progress bar */
-  background-color: #e0e0e0; /* Background color of the progress bar */
-  margin-top: 10px; /* Space between slider and progress bar */
+  margin: 0 auto; 
+  height: 2px; 
+  background-color: #e0e0e0;
+  margin-top: 10px; 
 }
 .slider-mover {
   width: 100%;
@@ -938,10 +938,10 @@ svg:not(:root) {
 }
 
 .swiper_nav-arrow {
-  background: #f9fafa; /* Background for the arrow buttons */
-  border-radius: 50%; /* Round buttons */
-  padding: 10px; /* Space around the SVG */
-  cursor: pointer; /* Pointer cursor for interactivity */
+  background: #f9fafa;
+  border-radius: 50%; 
+  padding: 10px; 
+  cursor: pointer; 
   transition: fill 0.5 ease;
 }
 .swiper_nav-arrow > svg {
@@ -952,20 +952,18 @@ svg:not(:root) {
 }
 
 .swiper_nav-arrow svg {
-  fill: #333333; /* Arrow color */
+  fill: #333333; 
 }
 .progress-bar {
   width: 0%;
   height: 100%;
-  background-color: #182cc0; /* Color of the progress bar */
-  /* Initial width of the progress bar */
+  background-color: #182cc0; 
   transition: width 0.3s ease;
 }
 .progress-bar2 {
   width: 0%;
   height: 100%;
-  background-color: #182cc0; /* Color of the progress bar */
-  /* Initial width of the progress bar */
+  background-color: #182cc0; 
   transition: width 0.3s ease;
 }
 .packpage-content {
@@ -1107,7 +1105,7 @@ svg:not(:root) {
 .second-container {
   display: flex;
   gap: 30px;
-  justify-content: center; /* Align items to start */
+  justify-content: center;
   padding-bottom: 20px;
 }
 
@@ -1296,12 +1294,12 @@ footer {
   grid-row-gap: 20px;
   align-items: flex-start;
   flex-direction: column;
-  transition: color 0.5s; /* Define the property you want to transition */
+  transition: color 0.5s; 
 }
 
 .footer-ra > p {
-  color: initial; /* Ensure there is an initial color state */
-  transition: color 0.5s; /* Add transition to the initial state */
+  color: initial; 
+  transition: color 0.5s; 
   cursor: pointer;
 }
 
@@ -1351,20 +1349,20 @@ footer {
 }
 @media (max-width: 1440px) {
   .third-slider {
-    overflow: hidden; /* Hide overflow to contain the children */
-    position: relative; /* Position relative for child positioning */
+    overflow: hidden; 
+    position: relative; 
     max-width: 1140px;
   }
 
   .second-container {
-    justify-content: center; /* Align items to start */
-    overflow-x: auto; /* Enable horizontal scrolling */
-    white-space: nowrap; /* Prevent wrapping */
-    scroll-behavior: smooth; /* Smooth scroll */
+    justify-content: center;
+    overflow-x: auto; 
+    white-space: nowrap; 
+    scroll-behavior: smooth; 
   }
 
   .third-slider-box {
-    flex-shrink: 0; /* Prevent shrinking */
+    flex-shrink: 0; 
   }
 
   .third-slider-box:hover .third-slider-img > img {
@@ -1376,7 +1374,7 @@ footer {
   }
 
   .third-slider-box {
-    max-width: 328px; /* Adjust size to fit within the screen */
+    max-width: 328px; 
   }
 }
 
@@ -2117,7 +2115,7 @@ footer {
 }
 @media (max-width: 400px) {
   .packpage-content {
-    padding-bottom: 0;
+    padding-bottom: 40px;
   }
   .arrow-icon {
     display: none;
@@ -2176,7 +2174,7 @@ footer {
     min-width: 292px;
   }
   .grid-2-col {
-    gap: 0px;
+    gap: 20px;
   }
 }
 @media only screen and (max-width: 329px) {
